# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  app.py  config.py  document_processor.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_e2e.py  test_integration.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: quality.sh
